--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,7 @@ lxml==3.5.0
 requests==2.8.1
 -e git+https://github.com/18F/regulations-site.git#egg=regulations
 
-# atf-specific/cloud.gov
+# fec-specific/cloud.gov
 dj-database-url==0.3.0
 django-overextends==0.4.0
 pyelasticsearch==1.4
