--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,9 @@ python:
 install:
     - pip install -r requirements.txt
     - npm install -g grunt-cli bower
+    - npm install
 script:
+    - grunt
     - python manage.py migrate --fake-initial
     - python manage.py compile_frontend
 
