--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ python:
     - "2.7"
 install:
     - pip install -r requirements.txt
+    - pip install -r requirements_test.txt
     - npm install -g grunt-cli bower
     - npm install
 script:
