--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ python:
 install:
     - pip install -r requirements.txt
     - pip install -r requirements_test.txt
+    - pip install -r requirements_dev.txt
     - npm install -g grunt-cli bower
     - npm install
 script:
