--- a/.travis.yml
+++ b/.travis.yml
@@ -16,8 +16,8 @@ script:
 
 # Simple smoke tests
 after_deploy:
-  - curl --silent --fail --head https://fec-eregs-dev.apps.cloud.gov || travis_terminate $?
-  - curl --silent --fail --get https://fec-eregs-dev.apps.cloud.gov/api/regulation/2 > /dev/null || travis_terminate $?
+  - curl --silent --fail --head https://fec-dev-eregs.18f.gov || travis_terminate $?
+  - curl --silent --fail --get https://fec-dev-eregs.18f.gov/api/regulation/2 > /dev/null || travis_terminate $?
 
 # This does not handle zero-downtime deployments
 deploy:
