--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,7 @@ jsonschema==2.5.1
 # django already covered
 lxml==3.5.0
 requests==2.8.1
--e git+https://github.com/18F/regulations-site.git#egg=regulations
+-e git+https://github.com/18F/regulations-site.git@09d04ce185316fac8f0726ae0f70d5a035487009#egg=regulations
 
 # fec-specific/cloud.gov
 cfenv==0.5.2
