Env vars for other FEC app URLs

--- a/manifest.stage.yml
+++ b/manifest.stage.yml
@@ -1,3 +1,7 @@
 ---
 inherit: manifest.base.yml
 host: fec-stage-eregs
+env:
+  FEC_API_URL: https://fec-stage-api.18f.gov
+  FEC_CMS_URL: https://fec-stage-proxy.18f.gov
+  FEC_WEB_URL: https://fec-stage-proxy.18f.gov/data
