--- a/manifest.dev.yml
+++ b/manifest.dev.yml
@@ -1,3 +1,7 @@
 ---
 inherit: manifest.base.yml
 host: fec-dev-eregs
+env:
+  FEC_API_URL: https://fec-dev-api.18f.gov
+  FEC_CMS_URL: https://fec-dev-proxy.18f.gov
+  FEC_WEB_URL: https://fec-dev-proxy.18f.gov/data
