--- a/manifest.prod.yml
+++ b/manifest.prod.yml
@@ -2,3 +2,7 @@
 inherit: manifest.base.yml
 host: fec-prod-eregs
 instances: 2
+env:
+  FEC_API_URL: https://fec-prod-api.18f.gov
+  FEC_CMS_URL: https://beta.fec.gov
+  FEC_WEB_URL: https://beta.fec.gov/data
