--- a/package.json
+++ b/package.json
@@ -6,12 +6,17 @@
     "fec-style": "^2.1.0"
   },
   "devDependencies": {
+    "browserify": "^13.0.1",
     "grunt": "^0.4.5",
     "grunt-contrib-copy": "^1.0.0",
     "grunt-sass": "^1.1.0",
+    "handlebars": "^4.0.5",
+    "hbsfy": "^2.7.0",
     "load-grunt-tasks": "^3.4.1"
   },
   "scripts": {
+    "build": "grunt build:css && npm run build-js",
+    "build-js": "browserify -g hbsfy --debug -o fec_eregs/static/fec_eregs/js/fec.bundle.js fec_eregs/static/fec_eregs/js/fec.js",
     "test": "echo \"Error: no test specified, use `python manage.py test` instead\" && exit 1"
   },
   "repository": {
