--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ install:
     - npm install -g grunt-cli bower
     - npm install
 script:
-    - grunt
+    - npm run build
     - python manage.py migrate --fake-initial
     - python manage.py compile_frontend
     - python manage.py test
