--- a/manifest.base.yml
+++ b/manifest.base.yml
@@ -1,6 +1,6 @@
 ---
 buildpack: python_buildpack
-command: python manage.py migrate --fake-initial && python manage.py collectstatic --noinput && waitress-serve --url-prefix /regulations --port=$VCAP_APP_PORT fec_eregs.wsgi:application
+command: python manage.py migrate --fake-initial && waitress-serve --url-prefix /regulations --port=$VCAP_APP_PORT fec_eregs.wsgi:application
 services:
   - fec-eregs-creds # Must provide HTTP_AUTH_USER, HTTP_AUTH_PASSWORD
   - fec-eregs-db
