Use tagged releases of regulations-core and -site
As a result, we don't have to run tests on those packages

Using regulations-site 5.0.0 as we need to do the LESS -> SASS
conversion.

--- a/requirements.txt
+++ b/requirements.txt
@@ -3,13 +3,13 @@ anyjson==0.3.3
 django==1.8.14
 django-haystack==2.4.1
 jsonschema==2.5.1
--e git+https://github.com/18F/regulations-core.git#egg=regcore
+-e git+https://github.com/18F/regulations-core.git@2.0.0#egg=regcore
 
 # regulations-site
 # django already covered
 lxml==3.5.0
 requests==2.8.1
--e git+https://github.com/eregs/regulations-site.git@854a6bda7ce0bb46f8ac2f1e0e4c53cf24cd9adb#egg=regulations
+-e git+https://github.com/18F/regulations-site.git@5.0.0#egg=regulations
 
 # fec-specific/cloud.gov
 cfenv==0.5.2
