--- a/manifest.base.yml
+++ b/manifest.base.yml
@@ -2,7 +2,7 @@
 buildpack: python_buildpack
 command: python manage.py migrate --fake-initial && gunicorn --bind=0.0.0.0:$PORT fec_eregs.wsgi:application
 services:
-  - fec-eregs-creds # Must provide HTTP_AUTH_USER, HTTP_AUTH_PASSWORD
+  - fec-eregs-creds # Must provide HTTP_AUTH_USER, HTTP_AUTH_PASSWORD, NEW_RELIC_LICENSE_KEY
   - fec-eregs-db
   - fec-eregs-search-1.7.1
 env:
