--- a/manifest.dev.yml
+++ b/manifest.dev.yml
@@ -5,3 +5,4 @@ env:
   FEC_API_URL: https://fec-dev-api.18f.gov
   FEC_CMS_URL: https://fec-dev-proxy.18f.gov
   FEC_WEB_URL: https://fec-dev-proxy.18f.gov/data
+  NEW_RELIC_APP_NAME: fec-dev-eregs
