--- a/manifest.prod.yml
+++ b/manifest.prod.yml
@@ -6,3 +6,4 @@ env:
   FEC_API_URL: https://fec-prod-api.18f.gov
   FEC_CMS_URL: https://beta.fec.gov
   FEC_WEB_URL: https://beta.fec.gov/data
+  NEW_RELIC_APP_NAME: fec-prod-eregs
