--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "eRegulations viewer for the Federal Election Commission's public legal resources.",
   "dependencies": {
-    "fec-style": "^2.5.1"
+    "fec-style": "5.8.2"
   },
   "devDependencies": {
     "browserify": "^13.0.1",
