--- a/manifest.dev.yml
+++ b/manifest.dev.yml
@@ -6,3 +6,5 @@ env:
   FEC_CMS_URL: https://fec-dev-proxy.18f.gov
   FEC_WEB_URL: https://fec-dev-proxy.18f.gov/data
   NEW_RELIC_APP_NAME: fec-dev-eregs
+services:
+    - fec-creds-dev
