Making invoke tasks so that fec-eregs works like the rest of fec apps Trying to fix the formatting Travis added

--- a/manifest_dev.yml
+++ b/manifest_dev.yml
@@ -1,5 +1,5 @@
 ---
-inherit: manifest.base.yml
+inherit: manifest_base.yml
 host: fec-dev-eregs
 env:
   FEC_API_URL: https://fec-dev-api.app.cloud.gov
