--- a/manifest_stage.yml
+++ b/manifest_stage.yml
@@ -1,5 +1,5 @@
 ---
-inherit: manifest.base.yml
+inherit: manifest_base.yml
 host: fec-stage-eregs
 env:
   FEC_API_URL: https://fec-stage-api.18f.gov
