--- a/.travis.yml
+++ b/.travis.yml
@@ -26,7 +26,7 @@ script:
 before_deploy:
 - travis_retry pip install bandit
 - cd ..
-- bandit -r fec-eregs
+- bandit -r fec-eregs/fec_eregs "fec_eregs/*.py"
 - cd fec-eregs
 - mkdir $HOME/bin
 - export PATH=$HOME/bin:$PATH
