including regulations-parser in repo and script to run fec regs

--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -1,1 +1,5 @@
 django-debug-toolbar==1.9.1
+
+# regulations-parser (for loading regs)
+requests[security]
+-e git+https://github.com/18F/regulations-parser.git@4.3.0#egg=regulations_parser
