making paths relative

--- a/manifest_stage.yml
+++ b/manifest_stage.yml
@@ -3,8 +3,8 @@ inherit: manifest_base.yml
 host: fec-stage-eregs
 env:
   FEC_API_URL: https://fec-stage-api.18f.gov
-  FEC_CMS_URL: https://fec-stage-proxy.18f.gov
-  FEC_WEB_URL: https://fec-stage-proxy.18f.gov/data
+  FEC_CMS_URL: ""
+  FEC_WEB_URL: "/data"
   NEW_RELIC_APP_NAME: fec-stage-eregs
 services:
     - fec-creds-stage
