--- a/manifest_dev.yml
+++ b/manifest_dev.yml
@@ -3,8 +3,8 @@ inherit: manifest_base.yml
 host: fec-dev-eregs
 env:
   FEC_API_URL: https://fec-dev-api.app.cloud.gov
-  FEC_CMS_URL: https://fec-dev-proxy.app.cloud.gov
-  FEC_WEB_URL: https://fec-dev-proxy.app.cloud.gov/data
+  FEC_CMS_URL: "/"
+  FEC_WEB_URL: "/data"
   NEW_RELIC_APP_NAME: fec | dev | eregs
 services:
     - fec-creds-dev
