--- a/manifest_base.yml
+++ b/manifest_base.yml
@@ -1,6 +1,6 @@
 ---
 buildpack: https://github.com/cloudfoundry/python-buildpack
-command: python manage.py migrate --fake-initial && gunicorn --bind=0.0.0.0:$PORT fec_eregs.wsgi:application
+command: python manage.py migrate --fake-initial && gunicorn -k gevent -w 2 --bind=0.0.0.0:$PORT fec_eregs.wsgi:application
 services:
   - fec-eregs-creds # Must provide HTTP_AUTH_USER, HTTP_AUTH_PASSWORD
   - fec-eregs-db
