--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,9 +9,10 @@ jobs:
       # use `-browsers` prefix for selenium tests, e.g. `<image_name>-browsers`
 
       # Python
-      image: 2.7.13
-      environment:
+      - image: 2.7.13
+        environment:
           TZ: America/New_York
+
     working_directory: ~/repo
 
     steps:
