--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,7 +9,7 @@ jobs:
       # use `-browsers` prefix for selenium tests, e.g. `<image_name>-browsers`
 
       # Python
-      - image: 2.7.13
+      - image: circleci/python:2.7.13
         environment:
           TZ: America/New_York
 
