--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,6 +18,10 @@ jobs:
     steps:
       - checkout
 
+      - dependencies:
+      pre:
+        - sudo apt-get update; sudo apt-get install ruby-sass
+
       - restore_cache:
           keys:
           - fec-eregs-dependencies-{{ checksum "requirements.txt" }}-{{ checksum "requirements_dev.txt" }}-{{ checksum "requirements_test.txt" }}-{{ checksum "package.json" }}
@@ -45,7 +49,7 @@ jobs:
             python -m venv venv
             . venv/bin/activate
             pip install -r requirements.txt
-            pip install -r requirements_test.txt
+            pip install -r requirements.txt
 
       - save_cache:
           paths:
