--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -40,6 +40,7 @@ jobs:
             nvm use 8.9.1
             nvm alias default 8.9.1
             npm install
+            npm install -g grunt-cli bower
             npm run build
 
       - run:
