--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -46,10 +46,11 @@ jobs:
       - run:
           name: Install Python dependencies
           command: |
-            python -m venv venv
+            python -m venv .venv
             . venv/bin/activate
             pip install -r requirements.txt
-            pip install -r requirements.txt
+            pip install -r requirements_test.txt
+            pip install -r requirements_dev.txt
 
       - save_cache:
           paths:
