--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -48,9 +48,9 @@ jobs:
           command: |
             pip install virtualenv
             mkdir ./venv
-            pipenv install -r requirements.txt
-            pipenv install -r requirements_test.txt
-            pipenv install -r requirements_dev.txt
+            pip install -r requirements.txt
+            pip install -r requirements_test.txt
+            pip install -r requirements_dev.txt
 
       - save_cache:
           paths:
