--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -48,6 +48,7 @@ jobs:
           command: |
             pip install virtualenv
             mkdir ./venv
+            cd ./venv
             pip install -r requirements.txt
             pip install -r requirements_test.txt
             pip install -r requirements_dev.txt
