--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -47,8 +47,8 @@ jobs:
           name: Install Python dependencies
           command: |
             pip install virtualenv
-            mkdir ./venv
-            cd ./venv
+            virtualenv .venv
+            . venv/bin/activate
             pip install -r requirements.txt
             pip install -r requirements_test.txt
             pip install -r requirements_dev.txt
