--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,8 +30,9 @@ jobs:
           - fec-eregs-dependencies-
 
       - run:
-          name: Install node dependencies
+          name: Install sass and node dependencies
           command: |
+            export PATH=$HOME/.gem/ruby/2.4.2/bin/sass:$PATH
             curl -o- https://raw.githubusercontent.com/creationix/nvm/v0.33.6/install.sh | bash
             echo ". ~/.nvm/nvm.sh" >> $BASH_ENV
             export NVM_DIR="$HOME/.nvm"
