--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,6 +32,7 @@ jobs:
       - run:
           name: Install sass and node dependencies
           command: |
+            mkdir -p $HOME/bin
             export PATH=$HOME/.gem/ruby/2.4.2/bin/sass:$PATH
             curl -o- https://raw.githubusercontent.com/creationix/nvm/v0.33.6/install.sh | bash
             echo ". ~/.nvm/nvm.sh" >> $BASH_ENV
