--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,6 +17,8 @@ jobs:
 
     dependencies:
       pre:
+        # sudo apt-get install ruby-full rubygems installs Ruby 2.3.1
+        # Ruby 2.3.1 is an old stable release
         - sudo apt-get update; sudo apt-get install ruby-full rubygems
         - sudo gem install sass -v 3.4.25
 
@@ -34,6 +36,7 @@ jobs:
           command: |
             mkdir -p $HOME/bin
             export PATH=$HOME/bin:$PATH
+            export PATH=$HOME/.gem/ruby/2.3.1/bin/sass:$PATH
             curl -o- https://raw.githubusercontent.com/creationix/nvm/v0.33.6/install.sh | bash
             echo ". ~/.nvm/nvm.sh" >> $BASH_ENV
             export NVM_DIR="$HOME/.nvm"
