--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,13 +15,6 @@ jobs:
 
     working_directory: ~/repo
 
-    dependencies:
-      pre:
-        # sudo apt-get install ruby-full installs Ruby 2.3.1
-        # Ruby 2.3.1 is an old stable release
-        - sudo apt-get update; sudo apt-get install ruby-full
-        - sudo gem install sass -v 3.4.25
-
     steps:
       - checkout
 
@@ -36,6 +29,9 @@ jobs:
           command: |
             sudo apt-get update && sudo apt-get install ruby-full
             sudo gem install sass -v 3.4.25
+            export PATH="/usr/bin/ruby:$PATH"
+            export PATH="/usr/local/bin/sass:$PATH"
+
       - run:
           name: Install node dependencies
           command: |
