--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,7 +9,7 @@ jobs:
       # use `-browsers` prefix for selenium tests, e.g. `<image_name>-browsers`
 
       # Python with node
-      circleci/python:2.7.14-jessie-node
+      - image: circleci/python:2.7.14-jessie-node
         environment:
           TZ: America/New_York
 
