--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,8 +35,8 @@ jobs:
       - run:
           name: Install node dependencies
           command: |
-            npm install -g grunt-cli bower
-            npm install
+            sudo npm install -g grunt-cli bower
+            sudo npm install
 
       - run:
           name: Install Python dependencies
