--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,7 +9,7 @@ jobs:
       # use `-browsers` prefix for selenium tests, e.g. `<image_name>-browsers`
 
       # Python with node
-      - image: circleci/python:2.7.14-jessie-node
+      - image: circleci/python:3.6.1-jessie-node-browsers
         environment:
           TZ: America/New_York
 
@@ -25,16 +25,9 @@ jobs:
           - fec-eregs-dependencies-
 
       - run:
-          name: Install Ruby and SASS
-          command: |
-            sudo apt-get update && sudo apt-get install ruby-full
-            sudo gem install sass -v 3.4.25
-            export PATH="/usr/bin/ruby:$PATH"
-            export PATH="/usr/local/bin/sass:$PATH"
-
-      - run:
           name: Install node dependencies
           command: |
+            npm --version
             sudo npm install
 
       - run:
