--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,7 +35,7 @@ jobs:
           command: |
             pip install virtualenv
             virtualenv venv
-            sudo chmod -R o+rwx /usr/local/lib/python3.6/site-packages/virtualenv.py
+            sudo chmod -R o+rwx /usr/local/lib/python3.6/site-packages
             source venv/bin/activate
             pip install -r requirements.txt
             pip install -r requirements_test.txt
