--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,7 +35,7 @@ jobs:
           command: |
             python3 -m venv .env
             . .env/bin/activate
-            python -V
+            which python3
             source venv/bin/activate
             pip install -r requirements.txt
             pip install -r requirements_test.txt
