--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,6 +29,7 @@ jobs:
           command: |
             npm --version
             npm install
+            npm install -g grunt-cli
 
       - run:
           name: Install Python dependencies
@@ -48,7 +49,7 @@ jobs:
       - run:
           name: Run tests
           command: |
-            source venv/bin/activate
+            . .env/bin/activate
             npm run build
             python manage.py compile_frontend
 
