--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,8 +28,8 @@ jobs:
           name: Install node dependencies
           command: |
             npm --version
-            npm install
-            npm install -g grunt-cli
+            sudo npm install
+            sudo npm install -g grunt-cli
 
       - run:
           name: Install Python dependencies
