--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,7 +9,7 @@ jobs:
       # use `-browsers` prefix for selenium tests, e.g. `<image_name>-browsers`
 
       # Python with node
-      - image: circleci/python:3.6-jessie-node-browsers
+      - image: circleci/python:3.6.1
         environment:
           TZ: America/New_York
 
@@ -23,6 +23,11 @@ jobs:
           - fec-eregs-dependencies-{{ checksum "requirements.txt" }}-{{ checksum "requirements_dev.txt" }}-{{ checksum "requirements_test.txt" }}-{{ checksum "package.json" }}
           # fallback to using the latest cache if no exact match is found
           - fec-eregs-dependencies-
+
+      - run:
+          name: Install node version
+          command: |
+            nvm install v6.9.2
 
       - run:
           name: Install node dependencies
