--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,16 +25,20 @@ jobs:
           - fec-eregs-dependencies-
 
       - run:
-          name: Install node version
-          command: |
-            nvm install v6.9.2
-
-      - run:
           name: Install node dependencies
           command: |
+            curl -o- https://raw.githubusercontent.com/creationix/nvm/v0.33.6/install.sh | bash
+            echo ". ~/.nvm/nvm.sh" >> $BASH_ENV
+            export NVM_DIR="$HOME/.nvm"
+            [ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh"  # This loads nvm
+            [ -s "$NVM_DIR/bash_completion" ] && \. "$NVM_DIR/bash_completion"  # This loads nvm bash_completion
+            nvm install v6.9.2
+            nvm use 6.9.2
+            nvm alias default 6.9.2
             npm --version
             sudo npm install
             sudo npm install -g grunt-cli
+            npm run build
 
       - run:
           name: Install Python dependencies
