Using node v6.9.2 to get tests to pass

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -59,6 +59,7 @@ jobs:
           name: Run tests
           command: |
             . .env/bin/activate
+            nvm use 6.9.2
             npm run build
             python manage.py compile_frontend
 
