Updating FEC_CMS_URL variable to correct breadcrumbs issue

--- a/manifest_prod.yml
+++ b/manifest_prod.yml
@@ -4,7 +4,7 @@ host: fec-prod-eregs
 instances: 4
 env:
   FEC_API_URL: https://fec-prod-api.18f.gov
-  FEC_CMS_URL: ""
+  FEC_CMS_URL: "http://www.fec.gov"
   FEC_WEB_URL: "/data"
   NEW_RELIC_APP_NAME: fec-prod-eregs
 services:
