--- a/manifest_dev.yml
+++ b/manifest_dev.yml
@@ -3,7 +3,7 @@ inherit: manifest_base.yml
 host: fec-dev-eregs
 env:
   FEC_API_URL: https://fec-dev-api.app.cloud.gov
-  FEC_CMS_URL: "/"
+  FEC_CMS_URL: "http://fec-dev-proxy.app.cloud.gov"
   FEC_WEB_URL: "/data"
   NEW_RELIC_APP_NAME: fec | dev | eregs
 services:
