--- a/manifest_stage.yml
+++ b/manifest_stage.yml
@@ -2,7 +2,7 @@
 inherit: manifest_base.yml
 host: fec-stage-eregs
 env:
-  FEC_API_URL: https://fec-stage-api.18f.gov
+  FEC_API_URL: "https://api-stage.open.fec.gov"
   FEC_CMS_URL: "https://fec-stage-proxy.app.cloud.gov"
   FEC_WEB_URL: "/data"
   NEW_RELIC_APP_NAME: fec-stage-eregs
