--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 # regulations-core
 django>=1.11,<1.12
 cached_property==1.3.1
-django-mptt==0.9.0
+django-mptt~=0.8.6
 anyjson==0.3.3
 jsonschema==2.5.1
 six==1.11.0
