--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "devDependencies": {
     "browserify": "^13.0.0",
+    "glossary-panel": "1.0.0",
     "grunt": "^0.4.5",
     "grunt-contrib-copy": "^1.0.0",
     "grunt-sass": "^2.0.0",
