--- a/manifest_dev.yml
+++ b/manifest_dev.yml
@@ -1,5 +1,6 @@
 ---
-buildpack: https://github.com/cloudfoundry/python-buildpack
+stack: cflinuxfs3
+buildpack: python_buildpack
 command: python manage.py migrate --fake-initial && gunicorn -k gevent -w 2 --bind=0.0.0.0:$PORT fec_eregs.wsgi:application
 services:
   - fec-eregs-creds # Must provide HTTP_AUTH_USER, HTTP_AUTH_PASSWORD
