--- a/manifest_dev.yml
+++ b/manifest_dev.yml
@@ -7,7 +7,6 @@ services:
   - fec-eregs-db
   - fec-creds-dev
 env:
-  NEW_RELIC_CONFIG_FILE: /home/vcap/app/newrelic.ini
   DJANGO_SETTINGS_MODULE: fec_eregs.settings.prod
   FEC_API_VERSION: v1
   SCRIPT_NAME: /regulations
@@ -15,7 +14,7 @@ env:
   FEC_API_URL: https://fec-dev-api.app.cloud.gov
   FEC_CMS_URL: "https://fec-dev-proxy.app.cloud.gov"
   FEC_WEB_URL: "/data"
-  NEW_RELIC_APP_NAME: fec | dev | eregs
+  APP_NAME: fec | dev | eregs
 applications:
   - name: eregs
     memory: 512M
