--- a/manifest_stage.yml
+++ b/manifest_stage.yml
@@ -4,7 +4,7 @@ buildpack: python_buildpack
 command: python manage.py migrate --fake-initial && gunicorn -k gevent -w 2 --bind=0.0.0.0:$PORT fec_eregs.wsgi:application
 services:
   - fec-eregs-creds # Must provide HTTP_AUTH_USER, HTTP_AUTH_PASSWORD
-  - fec-eregs-db
+  - fec-eregs-db-rdn
   - fec-creds-stage
 env:
   DJANGO_SETTINGS_MODULE: fec_eregs.settings.prod
