--- a/requirements.txt
+++ b/requirements.txt
@@ -15,7 +15,7 @@ regcore==4.2.0
 # django, cached-property, six already covered
 enum34==1.1.6
 futures==3.1.1
-requests==2.21.0
+requests==2.23.0
 boto3==1.5.13
 celery==4.1.0
 requests-toolbelt==0.8.0
@@ -29,6 +29,10 @@ gunicorn==19.10.0
 whitenoise==3.3.1
 invoke==0.22.0
 GitPython==2.1.15
-gevent==1.2.2
+gevent==1.4.0
 
 -e eregs_extensions/
+
+#install a repostiory
+-e git+git://github.com/fecgov/regulations-site@master#egg=regulations-site
+
