--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,14 @@
 # regulations-core
-django>=1.11,<1.12
+django==2.2.11
 cached_property==1.3.1
-django-mptt~=0.8.6
+django-mptt==0.9.0
 anyjson==0.3.3
 jsonschema==2.5.1
 six==1.11.0
 webargs==5.4.0
 pyelasticsearch==1.4
-django-haystack==2.4.1
+django-haystack==2.8.1
 psycopg2==2.7.3.2
-regcore==4.2.0
 
 # regulations-site
 # django, cached-property, six already covered
