Pin the regualtion-site to hash version and not master. This hash version has the latest pkg upgrades, removed many NPM and PKG deprecated warnings.

--- a/requirements.txt
+++ b/requirements.txt
@@ -34,5 +34,5 @@ gevent==1.4.0
 -e eregs_extensions/
 
 #install a repostiory
--e git+git://github.com/fecgov/regulations-site@master#egg=regulations
+-e git+git://github.com/fecgov/regulations-site@a11a00fe7e3d8e953220cbdad977375a6929e02d#egg=regulations
 
