Update the circle run task to create a compiled folder. Compiled folder has all the static assets.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -47,6 +47,7 @@ jobs:
           command: |
             . .env/bin/activate
             npm run build
+            mkdir compiled
             python manage.py compile_frontend
 
       - store_artifacts:
