--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -38,6 +38,7 @@ jobs:
           command: |
             python3 -m venv .env
             . .env/bin/activate
+            pip install pip==19.0.3
             pip install -r requirements.txt
             pip install -r requirements_test.txt
             pip install -r requirements_dev.txt
