--- a/manifest_dev.yml
+++ b/manifest_dev.yml
@@ -6,6 +6,7 @@ applications:
     disk_quota: 1G
     routes:
       - route: fec-dev-eregs.app.cloud.gov
+      - route: fec-dev-eregs.apps.internal
     stack: cflinuxfs3
     buildpacks:
       - python_buildpack
