--- a/manifest_prod.yml
+++ b/manifest_prod.yml
@@ -6,6 +6,7 @@ applications:
     disk_quota: 1G
     routes:
       - route: fec-prod-eregs.app.cloud.gov
+      - route: fec-prod-eregs.apps.internal
     stack: cflinuxfs3
     buildpacks:
       - python_buildpack
