--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "devDependencies": {
     "browserify": "^13.0.0",
+    "lodash": "4.17.19",
     "glossary-panel": "1.0.0",
     "grunt": "^1.1.0",
     "grunt-cli": "^1.2.0",
