--- a/manifest_dev.yml
+++ b/manifest_dev.yml
@@ -18,7 +18,7 @@ applications:
       FEC_API_VERSION: v1
       SCRIPT_NAME: /regulations
       WEB_CONCURRENCY: 4
-      FEC_API_URL: https://fec-dev-api.app.cloud.gov
-      FEC_CMS_URL: "https://fec-dev-proxy.app.cloud.gov"
+      FEC_API_URL: "https://fec-dev-api.app.cloud.gov"
+      FEC_CMS_URL: "https://dev.fec.gov"
       FEC_WEB_URL: "/data"
       APP_NAME: fec | dev | eregs
