--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -2,6 +2,6 @@
 requests[security]
 ipdb==0.10.3
 ipython>=6.0,<7.0
-regparser==4.3.1
+#regparser==4.3.1
 django-rq==2.1.0 # required by regparser, pin django compatibility
 djangorestframework==3.11.2 # required by regparser, pin django compatibility
