--- a/requirements-parsing.txt
+++ b/requirements-parsing.txt
@@ -33,10 +33,10 @@ elasticsearch==1.9.0
 enum34==1.1.6
 furl==1.0.1
 futures==3.1.1
-gevent==1.2.2
 gitdb2==2.0.3
 GitPython==2.1.8
-greenlet==0.4.13
+gevent==1.4.0
+greenlet==0.4.16 # pinned to fix build problem (parent is gevent)
 gunicorn==19.7.1
 humanfriendly==4.9
 idna==2.6
@@ -70,7 +70,7 @@ pyparsing==2.2.0
 python-constraint==1.3.1
 python-dateutil==2.7.2
 pytz==2018.3
-PyYAML==3.12
+PyYAML==5.3
 redis==3.1.0
 # regparser
 -e git+https://github.com/fecgov/regulations-parser.git@pkfec-django3-parser#egg=regparser
